# shades

./: .gitignore  .gitmodules  .ignore  .projectile  CMakeLists.txt  Makefile  README.md  README.rst  show.md
gloom/shaders/: simple.frag
gloom/src/: fft.cpp  fft.hpp  main.cpp  program.cpp  program.hpp  sound.cpp  sound.hpp
report/: report.org  report.tex
shaders/: shades.frag  shades.vert
src/: main.cpp  shader.cpp  shader.h
